# simenclave

./: .clang-format  .clang-tidy  .clangd  .commitlintrc.json  .editorconfig  .gitattributes  .gitignore  .swiftformat  .swiftlint.yml  .tool-versions  AGENTS.md  Brewfile  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  simenclave.code-workspace  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-hardware.yml  ci-macos.yml  ci-portable.yml  commitlint.yml  fence.yml  lint.yml  pages.yml  release.yml
Formula/: simenclave.rb
apps/helper/: Package.swift  README.md  project.yml
apps/helper/Sources/SimEnclaveHelperKit/: ApprovalGate.swift  CapabilityToken.swift  DeviceError.swift  InjectionEnv.swift  LoopbackClient.swift  LoopbackListener.swift  RequestRouter.swift  ServeObserver.swift  SocketIO.swift  TokenFile.swift
apps/helper/Sources/simenclave-helper/: main.swift
apps/helper/Sources/simenclave-menubar/: App.swift  BiometricGate.swift  HelperModel.swift  MenubarView.swift  SettingsView.swift  SimEnclaveWordmark.swift
apps/helper/Tests/SimEnclaveHelperKitTests/: AuthTests.swift  IdentityValidationTests.swift  InjectionEnvTests.swift  LoopbackRoundTripTests.swift  RouterRobustnessTests.swift
assets/simenclave.icon/: icon.json
docs/: README.md  development.md  parity.md  security-review-m4.md
docs/architecture/: simenclave-architecture.qd
docs/design/: m1-helper.md  m2-interposer.md  m3-fidelity-biometry.md
examples/native/: project.yml
examples/native-demo/: README.md
examples/native/Assets.xcassets/simenclave-wordmark.imageset/: Contents.json
examples/native/Sources/: App.swift  Brand.swift  Components.swift  SEConsole.swift  Tabs.swift
examples/native/Watch/: App.swift
examples/react-native/: app.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
examples/react-native/app/: _layout.tsx  about.tsx
examples/react-native/app/(tabs)/: _layout.tsx  history.tsx  index.tsx  keychain.tsx  sign.tsx
examples/react-native/assets/simenclave-dev.icon/: icon.json
examples/react-native/modules/expo-secure-enclave/: expo-module.config.json  index.ts
examples/react-native/src/se/: provider.ts  registry.ts  store.tsx  types.ts
examples/react-native/src/ui/: Brand.tsx  SelectedKeyRow.tsx  Toast.tsx  sui.ts
examples/rn-demo/: README.md
scripts/: build-menubar-app.sh  fence-check.sh  fence-selftest.sh  fetch-dobby.sh  install.sh  release.sh  set-scheme-env.sh
tests/: README.md
tools/simenclavectl/: Package.swift  README.md
tools/simenclavectl/Sources/SimEnclaveCTLKit/: CLI.swift  Discovery.swift  JSONValue.swift  LoopbackClient.swift  Version.swift
(+7 files in other folders)
